<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="?attr/back_color"
    tools:context=".setting.SettingShooserActivity">
    <ImageView
        android:id="@+id/back"
        android:layout_gravity="left"
        android:src="@drawable/arrow_left"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:tint="?attr/text_color" />
    <TextView
        android:id="@+id/stat"
        android:text="@string/settings"
        android:textColor="?attr/text_color"
        android:textSize="28dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/state"
        android:text="@string/setting_description"
        android:textColor="?attr/text_color"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/account"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:drawableStart="@drawable/person"
            android:drawableTint="?attr/text_color"
            android:text="@string/account"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/pay_plan"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/payment"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/get_token"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/request_client"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:drawableStart="@drawable/request"
            android:drawableTint="?attr/text_color"
            android:text="@string/request_client"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/pay_out"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:drawableStart="@drawable/payout"
            android:drawableTint="?attr/text_color"
            android:text="@string/pay_out"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/privacy_policy"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            android:text="@string/privacy_policy"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/lock"
            android:drawableTint="?attr/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/arabic"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            android:text="@string/arabic"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/lang"
            android:drawableTint="?attr/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/english"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            android:text="@string/english"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/lang"
            android:drawableTint="?attr/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/night_mode"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/dark"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/night"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/light_mode"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/flare"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:drawablePadding="10dp"
            android:text="@string/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/block"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/block_icon"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/block_list"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/rate"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/star"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/rate_app"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.GradientTextView
            android:id="@+id/log_out"
            android:textSize="18dp"
            android:textStyle="bold"
            android:drawableStart="@drawable/logout"
            android:drawableTint="?attr/text_color"
            android:layout_marginTop="15dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/log_out"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>