<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/back_color"
    tools:context=".pages.DashboardFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:background="?attr/back_color"
                android:layout_width="match_parent"
                app:tabTextAppearance="@style/MineCustomTabText"
                app:tabMode="scrollable"
                app:tabTextColor="?attr/text_color"
                app:tabSelectedTextColor="@color/app_dark_primary"
                app:tabIndicatorColor="@color/app_dark_primary"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    />



            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/viewPager2"/>


        </LinearLayout>

    </RelativeLayout>


</FrameLayout>