<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="?attr/back_color"
    tools:context=".setting.RequestClientActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <rozapp.roz.app.helper.EnglishLanguage
            android:id="@+id/tv_state1"
            android:text="@string/request_client_title"
            android:textColor="?attr/text_color"
            android:padding="5dp"
            android:textSize="27dp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <rozapp.roz.app.helper.EnglishLanguage
            android:id="@+id/tv_state"
            android:text="@string/request_client_desc"
            android:textColor="?attr/text_color"
            android:padding="5dp"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:textColor="?attr/text_color"
            app:hintTextColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            app:boxStrokeColor="?attr/text_color"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/text_color"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_inp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:textColor="?attr/text_color"
            app:hintTextColor="?attr/text_color"
            android:textColorHint="?attr/text_color"
            app:boxStrokeColor="?attr/text_color"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_ed"
                android:layout_width="match_parent"
                android:textColor="?attr/text_color"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pick_date_button"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/select_birthday"
            android:textSize="18sp"
            app:icon="@drawable/date" />
        <RelativeLayout
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/send_data"
                android:id="@+id/tv_login"
                android:textColor="#fff"
                android:textSize="20dp" />
            <ProgressBar
                android:id="@+id/progress_login"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:indeterminateTint="#fff"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </LinearLayout>




</LinearLayout>